--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <modules>
     <module>dv-commons-jwt</module>
     <module>dv-commons-http</module>
+    <module>dv-commons-base</module>
   </modules>
   <packaging>pom</packaging>
 
