--- a/dv-commons-http/pom.xml
+++ b/dv-commons-http/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>dv-commons</artifactId>
         <groupId>com.dv.commons</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0-RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
