--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.dv.commons</groupId>
   <artifactId>dv-commons</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0-RELEASE</version>
   <modules>
     <module>dv-commons-jwt</module>
     <module>dv-commons-http</module>
@@ -106,6 +106,7 @@
   </dependencyManagement>
 
   <build>
+    <defaultGoal>compile</defaultGoal>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
