--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.dv.commons</groupId>
   <artifactId>dv-commons</artifactId>
-  <version>2.0-SNAPSHOT</version>
+  <version>2.0-SHAPSHOT</version>
   <modules>
     <module>dv-commons-jwt</module>
     <module>dv-commons-http</module>
@@ -117,5 +117,17 @@
       </plugin>
     </plugins>
   </build>
+  <distributionManagement>
+    <repository>
+      <id>releases</id>
+      <name>Releases</name>
+      <url>https://nexus.51000.net/repository/maven-releases/</url>
+    </repository>
+    <snapshotRepository>
+      <id>snapshots</id>
+      <name>Snapshot</name>
+      <url>https://nexus.51000.net/repository/maven-snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
 
 </project>
