--- a/dv-commons-bom/pom.xml
+++ b/dv-commons-bom/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>dv-commons</artifactId>
         <groupId>com.dv.commons</groupId>
-        <version>2.1-SNAPSHOT</version>
+        <version>2.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -32,6 +32,11 @@
             <dependency>
                 <groupId>com.dv.commons</groupId>
                 <artifactId>dv-commons-jwt</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.dv.commons</groupId>
+                <artifactId>dv-commons-secure</artifactId>
                 <version>${project.version}</version>
             </dependency>
         </dependencies>
