--- a/dv-commons-script/pom.xml
+++ b/dv-commons-script/pom.xml
@@ -7,10 +7,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dv-commons-secure</artifactId>
+    <artifactId>dv-commons-script</artifactId>
     <packaging>jar</packaging>
 
-    <name>dv-commons-secure</name>
+    <name>dv-commons-script</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -19,8 +19,18 @@
 
     <dependencies>
         <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
+            <groupId>org.apache.groovy</groupId>
+            <artifactId>groovy</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>6.0.7</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
         </dependency>
     </dependencies>
 </project>
