--- a/dv-commons-base/pom.xml
+++ b/dv-commons-base/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>dv-commons</artifactId>
         <groupId>com.dv.commons</groupId>
-        <version>2.7.4-RELEASE</version>
+        <version>2.7.5-RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -18,5 +18,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>6.0.12</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
