版本正式进化为3.x, 将策略机地理出一个项目, 专门用来安放策略机

--- a/dv-commons-bom/pom.xml
+++ b/dv-commons-bom/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>dv-commons</artifactId>
         <groupId>com.dv.commons</groupId>
-        <version>2.7.9-RELEASE</version>
+        <version>3.0.0-RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -42,6 +42,11 @@
             <dependency>
                 <groupId>com.dv.commons</groupId>
                 <artifactId>dv-commons-script</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.dv.commons</groupId>
+                <artifactId>dv-commons-machine</artifactId>
                 <version>${project.version}</version>
             </dependency>
         </dependencies>
